--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_startup_name(bs):\n",
+    "    \"\"\"Extract the startup name \n",
+    "\n",
+    "    Args:\n",
+    "        bs (string): html format scrapped\n",
+    "\n",
+    "    Returns:\n",
+    "        string: startup name\n",
+    "    \"\"\"\n",
     "    h1 = str(bs.h1.text)\n",
     "    return h1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_about(bs):\n",
+    "    \"\"\"Get about us of startup\n",
+    "\n",
+    "    Args:\n",
+    "        bs (string): html \n",
+    "\n",
+    "    Returns:\n",
+    "        string: startup description\n",
+    "    \"\"\"\n",
     "    div = bs.findAll(\"div\", attrs={\"class\",\"pf-body\"})\n",
     "    get_div_description = div[0].find(\"li\")\n",
     "    description = get_div_description.find(\"div\", attrs={\"class\", \"item-property\"}).text\n",
@@ -36,17 +52,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3069233102.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "def get_founders(bs):\n",
-    "    "
+    "    \"\"\"Get startup's founder\n",
+    "\n",
+    "    Args:\n",
+    "        bs (string): _description_\n",
+    "\n",
+    "    Returns:\n",
+    "        string: startup's founder\n",
+    "    \"\"\"\n",
+    "    founder = \" \"\n",
+    "    return founder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +118,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2fd4d94ed33fb89102688ccaef4ca38c0a5281cf8786a168b05f3404318f0bae"
+    "hash": "04df42d258e3e6c1bd4a4e9ee27d3cee905bb2838ef9543630bc10527098a375"
    }
   }
  },
