add get_founders on scraping.ipynb

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (3069233102.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_founders(bs):\n",
     "    \"\"\"Get startup's founder\n",
@@ -74,13 +65,14 @@
     "    Returns:\n",
     "        string: startup's founder\n",
     "    \"\"\"\n",
-    "    founder = \" \"\n",
+    "    div = bs.findAll(\"div\", attrs={\"class\",\"pf-body\"})\n",
+    "    founder = div[1].find(\"a\").text\n",
     "    return founder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +81,8 @@
      "text": [
       "\n",
       "                            Acsendo                                                                                \n",
-      "Acsendo. Plataforma de gestión del talento destinada a evaluar y desarrollar el desempeño de los empleados. \n"
+      "Acsendo. Plataforma de gestión del talento destinada a evaluar y desarrollar el desempeño de los empleados. \n",
+      "Carlos Santana\n"
      ]
     }
    ],
@@ -98,7 +91,8 @@
     "html = urlopen(url)\n",
     "bs = BeautifulSoup(html.read(), 'html.parser')\n",
     "print(get_startup_name(bs))\n",
-    "print(get_about(bs))\n"
+    "print(get_about(bs))\n",
+    "print(get_founders(bs))\n"
    ]
   }
  ],
